src/AppBundle/Resources/scss/layout.scss
.nav, .pagination, .carousel, .panel-title a { cursor: pointer; } //bootstrap overwrite

body {
  font-size: $root-font-size-normal;
  line-height: $font-line-height-copy-normal;
  font-family: $font-family-default;
  background-color: $color-bright;

  @media (min-width:#{$screen-xxl-min}) {
    font-size: $root-font-size-large;
    line-height: $font-line-height-copy-large;
  }

  .body-bg {
    position: fixed;
    z-index: -2;
    bottom: 0;
    left: 50%;

    @media (min-width:#{$screen-xxl-min}) {
      left: auto;
      right: 0;
    }
  }

  .logo-game {
    position: fixed;
    z-index: -2;
    width: 50%;
    right: $default-element-margin;
    bottom: $default-margin;

    @media (min-width:#{$screen-md-min}) {
      width: auto;
    }
  }

  .main-header {
    position: relative;
    margin-bottom: $default-element-margin;

    @media (min-width: #{$screen-md-min}) {
      margin-bottom: $default-element-margin*2;
    }

    > nav {
      padding-top:0;
      padding-bottom:0;

      .mobile-nav-button {
        display: inline-block;
        color: $color-bright;
        font-size: $font-size-h2;
        margin-top: $default-padding*0.8;
        margin-right: $default-margin;

        @media (min-width: #{$screen-xl-min}) {
          display: none;
        }
      }

      >.logo {
        vertical-align: top;
      }

      .meta-nav {
        @extend .vertical-align;
        position: absolute;
        top: calc(100% + #{$default-margin});
        right: $default-margin;
        margin: 0;
        color: $font-color-dark;
        list-style-type: none;

        @media (min-width: #{$screen-md-min}) {
          top: 50%;
          color: $font-color-bright;
        }

        li {
          display: inline-block;

          & + li:before {
            content: ' | '
          }

          a {
            color: $font-color-dark;

            @media (min-width: #{$screen-md-min}) {
              color: $font-color-bright;
            }

            &:hover, &:focus {
              color: $color-xenobladex;
            }
          }
        }
      }
    }
  }

  .main-aside {
    display: none;
    background-color: $color-dark;

    ul {
      list-style-type: none;
      margin: 0;
      padding: 0;

      li {
        border-bottom: 1px $color-dark-darkened solid;

        & + li {
          border-top: 1px $color-dark-lightened solid;
        }
      }

      a {
        display: block;
        padding: $default-padding $default-margin;
        color: $font-color-bright;
        text-decoration: none;

        &.active{
          font-weight: bold;
        }

        &:hover, &:focus, &.active {
          color: $color-xenobladex;
        }
      }
    }

    @media (min-width: #{$screen-xl-min}) {
      &:not(.main-aside-mobile) {
        display: block;
        float: left;
        width: 250px;
        margin-right: $default-element-margin;
      }
    }

    &.main-aside-mobile {
      display: block;
      position: fixed;
      width: 70%;
      height: 100%;
      margin: 0;
      top: 0;
      left: 0;
      z-index: 999;
      overflow-y: scroll;
      -webkit-box-shadow: 0 0 5px 0 #000;
      -moz-box-shadow: 0 0 5px 0 #000;
      box-shadow: 0 0 5px 0 #000;

      @include transform-translate3d(-100%);

      @media (min-width: #{$screen-md-min}) {
        width: 25%;
      }
    }
  }

  .main-content {
    overflow: auto;

    @media (min-width: #{$screen-xl-min}) {
      margin-right: $default-element-margin*6;
    }

    .main-view {
      margin-bottom: $default-element-margin*5;
      padding: 0 $default-element-margin;
      > header {
        margin-bottom: $default-margin;
        h1 {
          font-size:$font-size-h1*0.8;
        }
      }

      @media (min-width: #{$screen-md-min}) {
        margin-bottom: $default-element-margin*2;

        > header {
          margin-bottom: $default-element-margin;
          h1 {
            font-size: $font-size-h1;
          }
        }
      }
    }
  }

  &.slide-menu-open {
    .main-aside-mobile {
      @include transform-translate3d(0);
      @include transitionStandard();
    }

    .main-content {
      overflow: visible;
    }

    .body-bg,
    .main-view,
    .main-header {
      @include transform-translate3d(70%);
      @include transitionStandard();
    }

    @media (min-width: #{$screen-md-min}) {
      .body-bg,
      .main-view,
      .main-header {
        @include transform-translate3d(25%);
      }
    }
  }
}

